# daily-problems-cli

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: release.yml
src/daily_problems_cli/: __init__.py  __main__.py  client.py  config.py  output_formatters.py
tests/: conftest.py  test_cli.py  test_config.py  test_output_formatters.py
