[project]
name = "daily-problems-cli"
version = "0.1.0"
description = "Command-line client for Daily Problems: download inputs and submit answers"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "kuhaku-space" }]
keywords = ["competitive-programming", "cli", "daily-problems"]
# No runtime dependencies — standard library only.
dependencies = []

[project.scripts]
daily = "daily_problems_cli.__main__:main"

[project.urls]
Homepage = "https://github.com/kuhaku-space/daily-problems-cli"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daily_problems_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
